--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: python
 python:
   - 2.7
   - 3.6
-  - 3.7
 script:
-  - pytest tests/unit/tests_structures.py
+  - python setup.py test
 install:
   - python setup.py build
